Edited README via GitHub

--- a/README
+++ b/README
@@ -1,2 +1,6 @@
-Work In Progress
-HTML5 and CSS3 Slides mechanism
+What is DZSlides
+================
+
+DZSlides is a HTML **template** to build **slides** in HTML5 and CSS3.
+
+Download *template.html*, and start editing it. That's all you need.
