--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 Yo,
 
     DZSlides is a HTML template to build slides in HTML5 and CSS3.
-    template.html is the only file you need.
+    'template.html' is the only file you need.
     Shells are extensions. You don't need them for a basic usage.
     For a complete presentation, see: http://paulrouget.com/dzslides.
 
