--- a/README
+++ b/README
@@ -5,6 +5,6 @@ Yo,
     Shells are extensions. You don't need them for a basic usage.
     For a complete presentation, see: http://paulrouget.com/dzslides.
 
-    See examples/readme/slides.html to start.
+    See 'examples/readme/slides.html' to start.
 
 -- @paulrouget
