Improve documentation : how to use shells

--- a/README
+++ b/README
@@ -7,4 +7,21 @@ Yo,
 
     See 'examples/readme/slides.html' to start.
 
+    The project contains two shells to handle your slides :
+
+    * 'shells/controls.html'
+    * 'shells/master.html'
+
+    To use 'shells/controls.html', you need to put slides url after 
+    controls.html page url. Example :
+
+    http://localhost/dzslides/shells/controls.html#../examples/tmnt/slides.html
+
+    
+    To use 'shells/master.html' you need to set your slides url in URL variable.
+    
+    Example : open 'master.html' file and change this line :
+
+    <script> var URL = "../examples/tmnt/slides.html"; </script>
+
 -- @paulrouget
