New shell (to replace master)

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
-* Paul Rouget <paul@mozilla.com>
+* paulrouget (paul@mozilla.com)
 * harobed (Stéphane Klein)
 * soundmonster (Leo B.)
+* hsablonniere (Hubert SABLONNIERE)
