--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,7 @@
 * harobed (Stéphane Klein)
 * soundmonster (Leo B.)
 * hsablonniere (Hubert SABLONNIERE)
+* Anthony Ricaud
+* louisremi (Louis-Rémi Babé)
+* jwendell (Jonh Wendell)
+* mstalfoort (Marc Stalfoort)
